--- a/index.html
+++ b/index.html
@@ -16,66 +16,69 @@
   
   <header>
   <!-- NAVIGATION -->
-  <nav class="flex">
-    <img src="../02_CODE/assets/logo-dark.svg">
-  Get Started
+  <nav class="header">
+    <img class="header__image" src="../02_CODE/assets/logo-dark.svg">
+      Get Started
   </nav>
 
 </header>
 
 <main>
   <!-- HERO -->
-  <section class="flex hero">
+  <section class="hero">
     <h1>Maximize skill, minimize budget</h1>
 
-    <p class="body-m">Our modern courses across a range of in-demand skills will give you the 
+    <p class="">Our modern courses across a range of in-demand skills will give you the 
     knowledge you need to live the life you want.</p>
 
-    <a href="#" class="button-2">Get Started</a>
+    <a href="#" class="hero__button">Get Started</a>
   </section>
 
   <!-- COURSES -->
-  <section class="column-flex-container">
-    <div class="column-flex-item card-intro">
+  <section class="courses">
+    <div class="card card__intro">
       <h3>Check out our most popular courses!</h3>
     </div>
 
-    <div class="column-flex-item card">
-      <img src="../02_CODE/assets/icon-animation.svg" class="card-icon">
-      <h4>Animation</h4>
-      <p class="body-m">Learn the latest animation techniques to create stunning motion 
+    <div class="card">
+      <!-- <img src="../02_CODE/assets/icon-animation.svg" class="card__icon"> -->
+      <h4 class="card__title">Animation</h4>
+      <p>Learn the latest animation techniques to create stunning motion 
       design and captivate your audience.</p>
       <a href="#">Get Started</a>
     </div>
 
-    <div class="column-flex-item card">
-      <img src="../02_CODE/assets/icon-design.svg" class="card-icon">
-      <h4>Design</h4>
-      <p class="body-m">Create beautiful, usable interfaces to help shape the future of 
+    <div class="card">
+      <img src="../02_CODE/assets/icon-design.svg" class="card__icon">
+      <h4 class="card__title">Design</h4>
+      <p>Create beautiful, usable interfaces to help shape the future of 
       how the web looks.</p>
       <a href="#">Get Started</a>
     </div>
 
-    <div class="column-flex-item card">
-      <img src="../02_CODE/assets/icon-photography.svg" class="card-icon">
-      <h4>Photography</h4>
-      <p class="body-m">Explore critical fundamentals like lighting, composition, and focus 
+  </section>
+
+  <section class="courses">
+    <div class="card">
+      <img src="../02_CODE/assets/icon-photography.svg" class="card__icon">
+      <h4 class="card__title">Photography</h4>
+      <p>Explore critical fundamentals like lighting, composition, and focus 
       to capture exceptional photos.</p>
       <a href="#">Get Started</a>
     </div>
 
-    <div class="column-flex-item card">
-      <img src="../02_CODE/assets/icon-crypto.svg" class="card-icon">
-      <h4>Crypto</h4>
-      <p class="body-m">All you need to know to get started investing in crypto. Go from beginner 
+    <div class="card">
+      <img src="../02_CODE/assets/icon-crypto.svg" class="card__icon">
+      <h4 class="card__title">Crypto</h4>
+      <p>All you need to know to get started investing in crypto. Go from beginner 
       to advanced with this 54 hour course.</p>
       <a href="#">Get Started</a>
     </div>
 
-    <div class="column-flex-item card">
-      <img src="../02_CODE/assets/icon-business.svg" class="card-icon">
-      <h4>Business</h4>
-      <p class="body-m">A step-by-step playbook to help you start, scale, and sustain your business 
+    <div class="card">
+      <img src="../02_CODE/assets/icon-business.svg" class="card__icon">
+      <h4 class="card__title">Business</h4>
+      <p>A step-by-step playbook to help you start, scale, and sustain your business 
       without outside investment.</p>
       <a href="#">Get Started</a>
     </div>
