--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 
 <main>
-  <!-- HERO -->
+  <!-- HERO 01 -->
   <section class="hero">
     <h1>Maximize skill, minimize budget</h1>
 
