--- a/index.html
+++ b/index.html
@@ -16,74 +16,99 @@
   
   <header>
   <!-- NAVIGATION -->
-  <nav class="header">
-    <img class="header__image" src="../02_CODE/assets/logo-dark.svg">
-      Get Started
+  <nav class="header header__background">
+    <img class="nav__image" src="../02_CODE/assets/logo-dark.svg">
+    <a href="#" class="nav__button">Get Started</a>
   </nav>
 
 </header>
 
 <main>
+  <div class="main__content-wrapper">
   <!-- HERO -->
   <section class="hero">
-    <h1>Maximize skill, minimize budget</h1>
+      <h1 class="hero__title">Maximize skill, minimize budget</h1>
 
-    <p class="">Our modern courses across a range of in-demand skills will give you the 
-    knowledge you need to live the life you want.</p>
+      <p class="">Our modern courses across a range of in-demand skills will give you the 
+      knowledge you need to live the life you want.</p>
 
-    <a href="#" class="hero__button">Get Started</a>
+      <a href="#" class="hero__button">Get Started</a>
+
   </section>
 
   <!-- COURSES -->
-  <section class="courses">
-    <div class="card card__intro">
-      <h3>Check out our most popular courses!</h3>
-    </div>
+    <section class="courses">
+      <div class="card card__first">
+        <h3>Check out our most popular courses!</h3>
+      </div>
 
-    <div class="card">
-      <!-- <img src="../02_CODE/assets/icon-animation.svg" class="card__icon"> -->
-      <h4 class="card__title">Animation</h4>
-      <p>Learn the latest animation techniques to create stunning motion 
-      design and captivate your audience.</p>
-      <a href="#">Get Started</a>
-    </div>
+      <div class="card">
 
-    <div class="card">
-      <img src="../02_CODE/assets/icon-design.svg" class="card__icon">
-      <h4 class="card__title">Design</h4>
-      <p>Create beautiful, usable interfaces to help shape the future of 
-      how the web looks.</p>
-      <a href="#">Get Started</a>
-    </div>
+        <img src="../02_CODE/assets/icon-animation.svg" class="card__icon">
 
-  </section>
+          <h4 class="card__title">Animation</h4>
+          <p>Learn the latest animation techniques to create stunning motion 
+          design and captivate your audience.</p>
 
-  <section class="courses">
-    <div class="card">
-      <img src="../02_CODE/assets/icon-photography.svg" class="card__icon">
-      <h4 class="card__title">Photography</h4>
-      <p>Explore critical fundamentals like lighting, composition, and focus 
-      to capture exceptional photos.</p>
-      <a href="#">Get Started</a>
-    </div>
+        <div class="card__info-link">
+          <a class="card__link" href="#">Get Started</a>
+        </div>
 
-    <div class="card">
-      <img src="../02_CODE/assets/icon-crypto.svg" class="card__icon">
-      <h4 class="card__title">Crypto</h4>
-      <p>All you need to know to get started investing in crypto. Go from beginner 
-      to advanced with this 54 hour course.</p>
-      <a href="#">Get Started</a>
-    </div>
+      </div>
 
-    <div class="card">
-      <img src="../02_CODE/assets/icon-business.svg" class="card__icon">
-      <h4 class="card__title">Business</h4>
-      <p>A step-by-step playbook to help you start, scale, and sustain your business 
-      without outside investment.</p>
-      <a href="#">Get Started</a>
-    </div>
+      <div class="card">
+        <img src="../02_CODE/assets/icon-design.svg" class="card__icon">
+        <h4 class="card__title">Design</h4>
+        <p>Create beautiful, usable interfaces to help shape the future of 
+        how the web looks.</p>
 
-  </section>
+        <div class="card__info-link">
+          <a class="card__link" href="#">Get Started</a>
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class="courses">
+      <div class="card">
+        <img src="../02_CODE/assets/icon-photography.svg" class="card__icon">
+        <h4 class="card__title">Photography</h4>
+        <p>Explore critical fundamentals like lighting, composition, and focus 
+        to capture exceptional photos.</p>
+
+        <div class="card__info-link">
+          <a class="card__link" href="#">Get Started</a>
+        </div>
+
+      </div>
+
+      <div class="card">
+        <img src="../02_CODE/assets/icon-crypto.svg" class="card__icon">
+        <h4 class="card__title">Crypto</h4>
+        <p>All you need to know to get started investing in crypto. Go from beginner 
+        to advanced with this 54 hour course.</p>
+
+        <div class="card__info-link">
+          <a class="card__link" href="#">Get Started</a>
+        </div>
+
+      </div>
+
+      <div class="card">
+        <img src="../02_CODE/assets/icon-business.svg" class="card__icon">
+        <h4 class="card__title">Business</h4>
+        <p>A step-by-step playbook to help you start, scale, and sustain your business 
+        without outside investment.</p>
+
+        <div class="card__info-link">
+          <a class="card__link" href="#">Get Started</a>
+        </div>
+
+      </div>
+
+    </section>
+  </div>
 </main>
 
 <!-- FOOTER -->
