Updated html and css

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
-  
+
   <header>
   <!-- NAVIGATION -->
-  <nav class="header header__background">
+  <nav class="header">
     <img class="nav__image" src="../02_CODE/assets/logo-dark.svg">
     <a href="#" class="nav__button">Get Started</a>
   </nav>
 
 </header>
 
-<main>
-  <div class="main__content-wrapper">
   <!-- HERO -->
   <section class="hero">
       <h1 class="hero__title">Maximize skill, minimize budget</h1>
@@ -109,11 +107,12 @@
 
     </section>
   </div>
-</main>
 
 <!-- FOOTER -->
   <footer>
+    <div class="footer__content">
   Get Started
+  </div>
   </footer>
 </body>
 </html>
