--- a/index.html
+++ b/index.html
@@ -14,105 +14,95 @@
 </head>
 <body>
 
+<div class="full-width-wrapper">
   <header>
   <!-- NAVIGATION -->
-  <nav class="header">
-    <img class="nav__image" src="../02_CODE/assets/logo-dark.svg">
-    <a href="#" class="nav__button">Get Started</a>
-  </nav>
-
-</header>
+    <nav class="header__nav">
+      <img class="header__image" src="../02_CODE/assets/logo-dark.svg">
+      <a href="#" class="button header__button">Get Started</a>
+    </nav>
+  </header>
 
   <!-- HERO -->
   <section class="hero">
+    <div class="hero__column">
       <h1 class="hero__title">Maximize skill, minimize budget</h1>
-
-      <p class="">Our modern courses across a range of in-demand skills will give you the 
+      <p class="p--medium">Our modern courses across a range of in-demand skills will give you the 
       knowledge you need to live the life you want.</p>
-
-      <a href="#" class="hero__button">Get Started</a>
-
+      <a href="#" class="button hero__button">Get Started</a>
+    </div>
   </section>
+</div>
 
+<div class="full-width-wrapper--gradient-background">
   <!-- COURSES -->
-    <section class="courses">
-      <div class="card card__first">
+
+    <section class="course-wrapper">
+
+      <article class="card card__first">
         <h3>Check out our most popular courses!</h3>
-      </div>
+      </article>
 
-      <div class="card">
-
+      <article class="card">
         <img src="../02_CODE/assets/icon-animation.svg" class="card__icon">
-
           <h4 class="card__title">Animation</h4>
-          <p>Learn the latest animation techniques to create stunning motion 
+          <p class="p--medium">Learn the latest animation techniques to create stunning motion 
           design and captivate your audience.</p>
-
         <div class="card__info-link">
           <a class="card__link" href="#">Get Started</a>
         </div>
 
-      </div>
+      </article>
 
-      <div class="card">
+      <article class="card">
         <img src="../02_CODE/assets/icon-design.svg" class="card__icon">
         <h4 class="card__title">Design</h4>
-        <p>Create beautiful, usable interfaces to help shape the future of 
+        <p class="p--medium">Create beautiful, usable interfaces to help shape the future of 
         how the web looks.</p>
-
         <div class="card__info-link">
           <a class="card__link" href="#">Get Started</a>
         </div>
+      </article>
 
-      </div>
-
-    </section>
-
-    <section class="courses">
-      <div class="card">
+      <article class="card">
         <img src="../02_CODE/assets/icon-photography.svg" class="card__icon">
         <h4 class="card__title">Photography</h4>
-        <p>Explore critical fundamentals like lighting, composition, and focus 
+        <p class="p--medium">Explore critical fundamentals like lighting, composition, and focus 
         to capture exceptional photos.</p>
-
         <div class="card__info-link">
           <a class="card__link" href="#">Get Started</a>
         </div>
+      </article>
 
-      </div>
-
-      <div class="card">
+      <article class="card">
         <img src="../02_CODE/assets/icon-crypto.svg" class="card__icon">
         <h4 class="card__title">Crypto</h4>
-        <p>All you need to know to get started investing in crypto. Go from beginner 
+        <p class="p--medium">All you need to know to get started investing in crypto. Go from beginner 
         to advanced with this 54 hour course.</p>
-
         <div class="card__info-link">
           <a class="card__link" href="#">Get Started</a>
         </div>
+      </article>
 
-      </div>
-
-      <div class="card">
+      <article class="card">
         <img src="../02_CODE/assets/icon-business.svg" class="card__icon">
         <h4 class="card__title">Business</h4>
-        <p>A step-by-step playbook to help you start, scale, and sustain your business 
+        <p class="p--medium">A step-by-step playbook to help you start, scale, and sustain your business 
         without outside investment.</p>
-
         <div class="card__info-link">
           <a class="card__link" href="#">Get Started</a>
         </div>
-
-      </div>
+      </article>
 
     </section>
   </div>
-
+</div>
 <!-- FOOTER -->
   <footer>
-    <div class="footer__content">
-  Get Started
-  </div>
+    <nav class="footer__nav">
+      <img class="nav__image" src="../02_CODE/assets/logo-light.svg">
+      <a href="#" class="button footer__button">Get Started</a>
+    </nav>
   </footer>
 </body>
 </html>
