Added alt tag to images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
   <!-- NAVIGATION -->
     <nav class="header__nav">
-      <img class="header__image" src="assets/logo-dark.svg">
+      <img class="header__image" src="assets/logo-dark.svg" alt="Skilled Logo">
       <a href="#" class="button header__button">Get Started</a>
     </nav>
   </header>
@@ -44,7 +44,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/icon-animation.svg" class="card__icon">
+        <img src="assets/icon-animation.svg" class="card__icon" alt="Animation Icon">
           <h4 class="card__title">Animation</h4>
           <p class="p--medium">Learn the latest animation techniques to create stunning motion 
           design and captivate your audience.</p>
@@ -55,7 +55,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/icon-design.svg" class="card__icon">
+        <img src="assets/icon-design.svg" class="card__icon" alt="Design Icon">
         <h4 class="card__title">Design</h4>
         <p class="p--medium">Create beautiful, usable interfaces to help shape the future of 
         how the web looks.</p>
@@ -65,7 +65,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/icon-photography.svg" class="card__icon">
+        <img src="assets/icon-photography.svg" class="card__icon" alt="Photography Icon">
         <h4 class="card__title">Photography</h4>
         <p class="p--medium">Explore critical fundamentals like lighting, composition, and focus 
         to capture exceptional photos.</p>
@@ -75,7 +75,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/icon-crypto.svg" class="card__icon">
+        <img src="assets/icon-crypto.svg" class="card__icon" alt="Crypto Icon">
         <h4 class="card__title">Crypto</h4>
         <p class="p--medium">All you need to know to get started investing in crypto. Go from beginner 
         to advanced with this 54 hour course.</p>
@@ -85,7 +85,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/icon-business.svg" class="card__icon">
+        <img src="assets/icon-business.svg" class="card__icon" alt="Business Icon">
         <h4 class="card__title">Business</h4>
         <p class="p--medium">A step-by-step playbook to help you start, scale, and sustain your business 
         without outside investment.</p>
@@ -100,7 +100,7 @@
 <!-- FOOTER -->
   <footer>
     <nav class="footer__nav">
-      <img class="nav__image" src="assets/logo-light.svg">
+      <img class="nav__image" src="assets/logo-light.svg" alt="Skilled Logo">
       <a href="#" class="button footer__button">Get Started</a>
     </nav>
   </footer>
